@@ -22,13 +22,10 @@ ADD new feature
                 [ ] default LiveJournal username and password (use KWallet)
                 [ ] last open opml file
 #000036 ADD [+] write CSS to the KHTMLPart in viewing articles -->smt
-                [ ] if the channel image size is well-sized, show in headers -->smt
                 [ ] handle palette changes (color changes in kcontrol)
 #000031 ADD [ ] Autosave: Remember feeds list in "current" file
                 Elaborate: when user saves file, remember as current and restore from it,
                 if file is unsaved, store it to data/current.opml.
-#000025 FIX [ ] fix path in m_html->begin( KURL( "file:/tmp/something.html" ) ) so that local images and css can be referenced from article preview   --> smt
-#000043 ADD [ ] download feed image specified for RSS (for #000036) --> smt
 #000021 ADD [ ] store fetched articles to Article Archive -->berkus
 #000027 CHG [ ] when changing current feed, change article in m_html also (arguable: mornfall suggested this to be an option!)
 #000004 ADD [ ] update ArticleList when selecting feed group - show articles from all child feeds, sorted by pubDate
